# scizor

./: .env.docker  .env.example  .gitignore  CLAUDE.md  LICENSE  PROJECT_STATUS.md  PROJECT_STATUS_v2.md  README.md  TESTING.md  TODO.md  alembic.ini  asx_symbols.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup.sh  start.sh  start_data_farmer_asx.py  test_backtester_wes.py
app/: main.py
app/api/routes/: dashboard.py  data_collection.py  health.py
app/backtest/: engine.py  metrics.py  validation.py
app/config/: database.py  settings.py
app/data/collectors/: asx_contracts.py  historical_collector.py  ibkr_client.py  market_data.py
app/data/models/: market.py  portfolio.py  signals.py
app/data/processors/: signals.py  technical.py  validation.py
app/strategies/: base.py  mean_reversion.py  momentum.py
app/tasks/: celery_app.py  data_collection.py  monitoring.py
app/utils/: ibkr_contracts.py  logging.py  metrics.py  rate_limiter.py
config/: config.yaml  daily_collection_config.py  data_collection_config.py  intraday_collection_config.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  nginx.conf  prometheus.yml
docs/: DATABASE.md  FRONTEND_CLAUDE.md  __init__.py  asx-swing-trading-stock-selection.md  asx_stock_selection_strategy.md  daily_market_data_collection.md  data_collection_strategy.md  enhanced_error_tracking.md  hybrid_architecture_decision.md  ibkr-api-context.md  ibkr_free_tier_strategy.md  intraday_collection_summary.md  intraday_data_collection.md  professional_data_collection_architecture.md  quick_reference_daily_collection.md  symbol_cleanup_summary.md  timezone_implementation.md
examples/: __init__.py  data_collection.py
scizor/: __init__.py
scizor/backtest/: engine.py
scizor/broker/: __init__.py  base.py  ib.py
scizor/config/: __init__.py  settings.py
scizor/core/: engine.py
scizor/data/: providers.py
scizor/database/: __main__.py  cli.py  collector.py  models.py  scheduler.py
scizor/monitoring/: metrics.py
scizor/portfolio/: manager.py
scizor/strategies/: base.py  moving_average.py
scripts/: add_replacement_symbols.py  analyze_collection_errors.py  clean_symbols.py  clear_symbols.py  daily_collection_cron.sh  daily_market_data_collection.py  fresh_symbol_population.py  historical_symbol_data_collection.py  intraday_collection.py  intraday_cron.sh  manage_watchlist.py  migrate_collection_logs_enhanced_errors.py  migrate_symbols_table.py  migrate_watchlist_table.py  populate_asx_professional_watchlist.py  populate_contracts.py  populate_symbols.py  seed_watchlists.py  setup_db.py  simple_ibkr_test.py  test_cba_only.py  test_daily_collection.py  test_data_collection.py  test_ibkr_connection.py  test_ibkr_simple.py  test_paper_trading_connection.py  test_pipeline.py  update_contracts.py  validate_symbols.py
services/algo-trader/: config.py  main.py
services/backtester/: README.md  config.py  engine.py  main.py  strategies.py
services/data-farmer/: __init__.py  config.py  main.py  professional_data_farmer.py
shared/: __init__.py
shared/database/: connection.py  models.py
shared/ibkr/: __init__.py  client.py  contracts.py  orders.py
shared/models/: schemas.py
shared/strategy/: __init__.py  base.py  indicators.py  portfolio.py  validation.py
shared/utils/: config.py  error_analysis.py  logging.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_backtest_engine.py  test_ibkr_client.py  test_signal_processing.py  test_strategies.py  test_technical_indicators.py
(+23 files in other folders)
